add Goals section in about page

--- a/public/About-page.html
+++ b/public/About-page.html
@@ -134,7 +134,7 @@
         <!-- heros Section -->
         <section>
           <div class="grid md:grid-cols-2 items-center gap-20 pb-10">
-            <div class="text-custom-28 md:text-4xl xl:text-5xl font-semibold">
+            <div class="text-custom-28 md:text-4xl 3xl:text-5xl font-semibold">
               <h1>About Skillbridge</h1>
             </div>
             <div>
@@ -167,7 +167,9 @@
             </div>
             <div class="flex flex-col gap-5">
               <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
-                <div class="bg-white p-10 flex flex-col items-start gap-8">
+                <div
+                  class="bg-white px-2 sm:px-5 md:px-10 py-5 md:py-10 flex flex-col items-start gap-8 rounded-medium"
+                >
                   <div
                     class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
                   >
@@ -196,7 +198,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="bg-white p-10 flex flex-col items-start gap-8">
+                <div
+                  class="bg-white px-2 sm:px-5 md:px-10 py-5 md:py-10 flex flex-col items-start gap-8 rounded-medium"
+                >
                   <div
                     class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
                   >
@@ -227,7 +231,9 @@
                 </div>
               </div>
               <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
-                <div class="bg-white p-10 flex flex-col items-start gap-8">
+                <div
+                  class="bg-white px-2 sm:px-5 md:px-10 py-5 md:py-10 flex flex-col items-start gap-8 rounded-medium"
+                >
                   <div
                     class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
                   >
@@ -263,7 +269,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="bg-white p-10 flex flex-col items-start gap-8">
+                <div
+                  class="bg-white px-2 sm:px-5 md:px-10 py-5 md:py-10 flex flex-col items-start gap-8 rounded-medium"
+                >
                   <div
                     class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
                   >
@@ -297,6 +305,203 @@
           </div>
         </section>
         <!-- Our Goals -->
+        <section>
+          <div class="flex flex-col gap-16">
+            <div class="grid grid-cols-5">
+              <div class="col-span-5 flex flex-col gap-2">
+                <h1 class="font-medium text-3xl">Our Goals</h1>
+                <p
+                  class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                >
+                  At SkillBridge, our goal is to empower individuals from all
+                  backgrounds to thrive in the world of design and development.
+                  We believe that education should be accessible and
+                  transformative, enabling learners to pursue their passions and
+                  make a meaningful impact.
+                  <span class="block"
+                    >Through our carefully crafted courses, we aim to</span
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="flex flex-col gap-5">
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+                <div
+                  class="bg-white px-2 sm:px-5 md:px-10 py-5 md:py-10 flex flex-col items-start gap-8 rounded-medium"
+                >
+                  <div
+                    class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
+                  >
+                    <svg
+                      width="28"
+                      height="29"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M10.657 27.856h6.686c3.807 0 5.69-1.955 5.657-5.865-.044-4.464-.066-7.708-.175-10.14-.318-7.153-2.298-9.252-8.82-9.252-6.52 0-8.512 2.1-8.83 9.252-.109 2.432-.13 5.676-.175 10.14-.032 3.91 1.85 5.865 5.657 5.865zm-.317-4.41c-.941 0-1.543-.622-1.543-1.554V16.16c0-.944.602-1.566 1.543-1.566h7.331c.93 0 1.532.622 1.532 1.566v5.732c0 .933-.602 1.555-1.532 1.555H10.34zm-1.543-4.575h10.406v-1.322H8.797v1.322zM14.005 0c-2.1 0-3.578 1.444-3.578 3.41h1.543c0-1.078.832-1.844 2.035-1.844 1.193 0 2.036.766 2.036 1.844h1.542c0-1.966-1.488-3.41-3.577-3.41z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-3">
+                    <h3 class="text-lg xl:text-xl 3xl:text-2xl font-medium">
+                      Provide Practical Skills
+                    </h3>
+                    <p
+                      class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                    >
+                      We focus on delivering practical skills that are relevant
+                      to the current industry demands. Our courses are designed
+                      to equip learners with the knowledge and tools needed to
+                      excel in their chosen field.
+                    </p>
+                  </div>
+                </div>
+                <div
+                  class="bg-white px-2 sm:px-5 md:px-10 py-5 md:py-10 flex flex-col items-start gap-8 rounded-medium"
+                >
+                  <div
+                    class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
+                  >
+                    <svg
+                      width="28"
+                      height="28"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M7.598 26.113h15.175c.516 0 .938-.41.938-.937a.973.973 0 00-.656-.903c-1.477-.585-1.782-2.496-.328-3.96.445-.446.984-1.02.984-2.192V4.68c0-2.438-1.207-3.68-3.633-3.68H7.633C5.207 1 4 2.23 4 4.68v17.812c0 2.414 1.219 3.621 3.598 3.621zm.105-1.886c-1.183 0-1.816-.633-1.816-1.747 0-1.054.75-1.734 1.922-1.734h12.023c.152 0 .293-.012.41-.035-.55 1.219-.457 2.508.164 3.516H7.703zm-.351-5.262a.678.678 0 01-.668-.68v-14.8c0-.376.304-.669.668-.669.363 0 .68.293.68.668v14.801c0 .375-.317.68-.68.68z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-3">
+                    <h3 class="text-lg xl:text-xl 3xl:text-2xl font-medium">
+                      Foster Creative Problem-Solving
+                    </h3>
+                    <p
+                      class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                    >
+                      We encourage creative thinking and problem-solving
+                      abilities, allowing our students to tackle real-world
+                      challenges with confidence and innovation.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+                <div
+                  class="bg-white px-2 sm:px-5 md:px-10 py-5 md:py-10 flex flex-col items-start gap-8 rounded-medium"
+                >
+                  <div
+                    class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
+                  >
+                    <svg
+                      width="28"
+                      height="28"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M0 14.485c0 2.01 1.392 3.113 2.959 3.113.657 0 1.15-.188 1.74-.562.551-.344.947-.138.947.345v3.644c0 1.94 1.006 2.936 2.93 2.936h2.581c.464 0 .668-.394.339-.956-.377-.6-.56-1.103-.56-1.773 0-1.595 1.092-3.014 3.064-3.014s3.055 1.419 3.055 3.014c0 .67-.183 1.172-.55 1.773-.33.562-.136.956.338.956h2.581c1.924 0 2.93-.995 2.93-2.936v-3.644c0-.483.396-.69.938-.345.599.374 1.092.562 1.74.562 1.576 0 2.968-1.103 2.968-3.113 0-2.019-1.392-3.122-2.968-3.122-.648 0-1.141.187-1.74.561-.542.345-.938.138-.938-.344V7.935c0-1.93-1.006-2.935-2.93-2.935h-2.581c-.474 0-.668.404-.339.965.367.601.551 1.103.551 1.773 0 1.596-1.083 3.014-3.055 3.014-1.972 0-3.065-1.418-3.065-3.014 0-.67.184-1.172.56-1.773.33-.561.127-.965-.338-.965H8.576c-1.924 0-2.93 1.005-2.93 2.935v3.645c0 .482-.396.689-.947.344-.59-.374-1.083-.561-1.74-.561C1.392 11.363 0 12.466 0 14.485z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-3">
+                    <h3 class="text-lg xl:text-xl 3xl:text-2xl font-medium">
+                      Promote Collaboration and Community
+                    </h3>
+                    <p
+                      class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                    >
+                      We believe in the power of collaboration and peer
+                      learning. Our platform fosters a supportive and inclusive
+                      community where learners can connect, share insights, and
+                      grow together.
+                    </p>
+                  </div>
+                </div>
+                <div
+                  class="bg-white px-2 sm:px-5 md:px-10 py-5 md:py-10 flex flex-col items-start gap-8 rounded-medium"
+                >
+                  <div
+                    class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
+                  >
+                    <svg
+                      width="28"
+                      height="27"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M22.863 23.707c.528 0 .961-.422.961-.938a.965.965 0 00-.96-.96h-1.43v-7.77c0-4.277-3.293-7.582-7.57-7.582-4.266 0-7.56 3.305-7.56 7.582v7.77H4.853c-.516 0-.926.433-.926.96 0 .516.41.938.926.938h18.011zm-8.015-9.633v7.735h-1.946v-7.735a.97.97 0 01.961-.984.99.99 0 01.985.984zm-11.602.809c.55 0 1.031-.457 1.031-.996 0-.563-.48-1.02-1.03-1.02H.996c-.54 0-.997.469-.997 1.02 0 .527.457.996.996.996h2.25zM5.648 7.09a1 1 0 001.418 0 1 1 0 000-1.418L5.484 4.078c-.375-.398-1.03-.398-1.43 0a1.012 1.012 0 000 1.418L5.649 7.09zm7.207-3.82c0 .55.457 1.02 1.008 1.02.563 0 1.02-.47 1.02-1.02V1.02c0-.551-.469-1.02-1.02-1.02-.55 0-1.008.469-1.008 1.02v2.25zm7.793 2.402a1 1 0 000 1.418 1 1 0 001.418 0l1.606-1.594a1.012 1.012 0 000-1.418c-.41-.398-1.031-.398-1.418 0l-1.606 1.594zm6.07 9.21c.552 0 1.02-.468 1.02-.995 0-.551-.468-1.02-1.02-1.02h-2.25c-.538 0-1.007.457-1.007 1.02 0 .539.469.996 1.008.996h2.25z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-3">
+                    <h3 class="text-lg xl:text-xl 3xl:text-2xl font-medium">
+                      Stay Ahead of the Curve
+                    </h3>
+                    <p
+                      class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                    >
+                      The digital landscape is constantly evolving, and we
+                      strive to stay at the forefront of industry trends. We
+                      regularly update our course content to ensure our students
+                      receive the latest knowledge and skills.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="grid grid-cols-1 md:grid-cols-6 gap-5 bg-white rounded-medium p-5 md:p-16 relative -z-20"
+            >
+              <div class="md:col-span-4 flex flex-col gap-3">
+                <h3
+                  class="text-custom-28 md:text-4xl 3xl:text-5xl font-semibold"
+                >
+                  <span>Together, </span> let's shape the future of digital
+                  innovation
+                </h3>
+                <p
+                  class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                >
+                  Join us on this exciting learning journey and unlock your
+                  potential in design and development.
+                </p>
+              </div>
+              <div>
+                <svg
+                  width="445"
+                  height="250"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="absolute right-56 -z-10 top-0 bottom-0"
+                >
+                  <path
+                    d="M46.36 326.917l120.52-120.521h120.521V85.876l120.521 120.52-120.521 120.521H46.359z"
+                    fill="#F7F7F8"
+                  />
+                  <path
+                    d="M46.36 85.875l120.52 120.521V85.876h120.521L407.922-34.647H166.88L46.36 85.875z"
+                    fill="#F7F7F8"
+                  />
+                </svg>
+              </div>
+              <div class="md:col-start-6 flex justify-end items-center">
+                <a
+                  href="#"
+                  class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  >Join Now</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
