--- a/public/Contact-page.html
+++ b/public/Contact-page.html
@@ -14,7 +14,7 @@
   </head>
   <body class="bg-mainbgColor text-darkCustomGrey font-Be-Vietnam-Pro">
     <div
-      class="px-2 py-6 md:py-4 md:px-4 3xl:max-w-screen-3xl mx-auto flex gap-32 flex-col"
+      class="px-2 py-6 md:py-4 md:px-4 3xl:max-w-screen-3xl mx-auto flex gap-10 md:gap-20 flex-col"
     >
       <!-- Header Section -->
       <header class="flex flex-col gap-6">
@@ -130,12 +130,14 @@
         </nav>
       </header>
 
-      <main class="lg:px-12 px-3 flex flex-col gap-24 pb-20">
+      <main class="lg:px-12 px-3 flex flex-col gap-10 md:gap-20 pb-20">
         <section>
-          <div class="grid grid-cols-2 items-center gap-20 pb-10">
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 items-center gap-5 md:gap-0 pb-10"
+          >
             <div>
               <h1 class="text-custom-28 md:text-4xl xl:text-5xl font-semibold">
-                Contact Us
+                Our Pricings
               </h1>
             </div>
             <div>
