--- a/index.html
+++ b/index.html
@@ -59,35 +59,35 @@
             <ul class="lg:flex hidden gap-2 md:gap-6">
               <li>
                 <a
-                  href="../public/index.html"
+                  href="./public/index.html"
                   class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Home</a
                 >
               </li>
               <li>
                 <a
-                  href="../public/Courses-page.html"
+                  href="./public/Courses-page.html"
                   class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Courses</a
                 >
               </li>
               <li>
                 <a
-                  href="../public/About-page.html"
+                  href="./public/About-page.html"
                   class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >About Us</a
                 >
               </li>
               <li>
                 <a
-                  href="../public/Pricing-page.html"
+                  href="./public/Pricing-page.html"
                   class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Pricing</a
                 >
               </li>
               <li>
                 <a
-                  href="../public/Contact-page.html"
+                  href="./public/Contact-page.html"
                   class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Contact</a
                 >
@@ -98,12 +98,12 @@
             <!-- login Btn -->
             <div class="flex gap-2 sm:gap-4">
               <a
-                href="../public/Sign_up-page.html"
+                href="./public/Sign_up-page.html"
                 class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >Sign Up</a
               >
               <a
-                href="../public/Login-page.html"
+                href="./public/Login-page.html"
                 class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >Login</a
               >
