--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             </div>
             <div class="relative overflow-hidden rounded-xl">
               <img
-                src="../public/asset/homepage/main-image.png"
+                src="./public/asset/homepage/main-image.png"
                 class="h-full w-full scale-105"
                 alt="This is the main image of website "
               />
@@ -731,7 +731,7 @@
                 <div class="flex gap-6 flex-col">
                   <div>
                     <img
-                      src="../public/asset/homepage/Web-Design-Fundamentals.png"
+                      src="./public/asset/homepage/Web-Design-Fundamentals.png"
                       alt="Web-Design-Fundamentals"
                       class="w-full h-full"
                     />
@@ -788,7 +788,7 @@
                 <div class="flex gap-6 flex-col">
                   <div>
                     <img
-                      src="../public/asset/homepage/UI&UX-Design.png"
+                      src="./public/asset/homepage/UI&UX-Design.png"
                       alt="Web-Design-Fundamentals"
                       class="w-full h-full"
                     />
@@ -846,7 +846,7 @@
                 <div class="flex gap-6 flex-col">
                   <div>
                     <img
-                      src="../public/asset/homepage/Mobile-App-Development.png"
+                      src="./public/asset/homepage/Mobile-App-Development.png"
                       alt="Web-Design-Fundamentals"
                       class="w-full h-full"
                     />
@@ -902,7 +902,7 @@
                 <div class="flex gap-6 flex-col">
                   <div>
                     <img
-                      src="../public/asset/homepage/Graphic-Design-for-Beginners.png"
+                      src="./public/asset/homepage/Graphic-Design-for-Beginners.png"
                       alt="Web-Design-Fundamentals"
                       class="w-full h-full"
                     />
@@ -959,7 +959,7 @@
                 <div class="flex gap-6 flex-col">
                   <div>
                     <img
-                      src="../public/asset/homepage/Front-End-Web-Development.png"
+                      src="./public/asset/homepage/Front-End-Web-Development.png"
                       alt="Web-Design-Fundamentals"
                       class="w-full h-full"
                     />
@@ -1016,7 +1016,7 @@
                 <div class="flex gap-6 flex-col">
                   <div>
                     <img
-                      src="../public/asset/homepage/Advance-Js-image.png"
+                      src="./public/asset/homepage/Advance-Js-image.png"
                       alt="Web-Design-Fundamentals"
                       class="w-full h-full"
                     />
@@ -1109,7 +1109,7 @@
                   class="bg-gray-200/20 p-5 md:p-10 border-t flex items-center justify-between"
                 >
                   <div class="flex items-center gap-2">
-                    <img src="../public/asset/homepage/sarah.png" alt="Sarah" />
+                    <img src="./public/asset/homepage/sarah.png" alt="Sarah" />
                     <p class="font-semibold text-sm md:text-base">Sarah L</p>
                   </div>
                   <div>
@@ -1137,7 +1137,7 @@
                   class="bg-gray-200/20 p-5 md:p-10 border-t flex items-center justify-between"
                 >
                   <div class="flex items-center gap-2">
-                    <img src="../public/asset/homepage/Jason.png" alt="Sarah" />
+                    <img src="./public/asset/homepage/Jason.png" alt="Sarah" />
                     <p class="font-semibold text-sm md:text-base">Jasom M</p>
                   </div>
                   <div>
@@ -1165,7 +1165,7 @@
                   class="bg-gray-200/20 p-5 md:p-10 border-t flex items-center justify-between"
                 >
                   <div class="flex items-center gap-2">
-                    <img src="../public/asset/homepage/emily.png" alt="Sarah" />
+                    <img src="./public/asset/homepage/emily.png" alt="Sarah" />
                     <p class="font-semibold text-sm md:text-base">Emily R</p>
                   </div>
                   <div>
@@ -1194,7 +1194,7 @@
                 >
                   <div class="flex items-center gap-2">
                     <img
-                      src="../public/asset/homepage/micheal.png"
+                      src="./public/asset/homepage/micheal.png"
                       alt="Sarah"
                     />
                     <p class="font-semibold text-sm md:text-base">Micheal K</p>
