fix page links hovring effect

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <li>
                 <a
                   href="./public/index.html"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Home</a
                 >
               </li>
