fix cards responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -473,6 +473,7 @@
               <div
                 class="flex flex-col rounded-lg gap-5 md:gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
+              <div class="h-full flex flex-col gap-8">
                 <div class="flex justify-end">
                   <p class="text-5xl sm:text-6xl 3xl:text-8xl font-bold">01</p>
                 </div>
@@ -486,7 +487,7 @@
                     Fit your coursework around your existing commitments and
                     obligations.
                   </p>
-                </div>
+                </div></div>
                 <div class="flex justify-end">
                   <div
                     class="bg-mainbgColor inline-block p-3 border rounded-md"
@@ -511,6 +512,7 @@
               <div
                 class="flex flex-col rounded-lg gap-5 md:gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
+              <div class="h-full flex flex-col gap-8">
                 <div class="flex justify-end">
                   <p class="text-5xl sm:text-6xl 3xl:text-8xl font-bold">02</p>
                 </div>
@@ -524,7 +526,7 @@
                     Learn from industry experts who have hands-on experience in
                     design and development.
                   </p>
-                </div>
+                </div></div>
                 <div class="flex justify-end">
                   <div
                     class="bg-mainbgColor inline-block p-3 border rounded-md"
@@ -549,6 +551,7 @@
               <div
                 class="flex flex-col rounded-lg gap-5 md:gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
+              <div class="h-full flex flex-col gap-8">
                 <div class="flex justify-end">
                   <p class="text-5xl sm:text-6xl 3xl:text-8xl font-bold">03</p>
                 </div>
@@ -562,7 +565,7 @@
                     Explore a wide range of design and development courses
                     covering various topics.
                   </p>
-                </div>
+                </div></div>
                 <div class="flex justify-end">
                   <div
                     class="bg-mainbgColor inline-block p-3 border rounded-md"
@@ -587,6 +590,7 @@
               <div
                 class="flex flex-col rounded-lg gap-5 md:gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
+              <div class="h-full flex flex-col gap-8">
                 <div class="flex justify-end">
                   <p class="text-5xl sm:text-6xl 3xl:text-8xl font-bold">04</p>
                 </div>
@@ -600,7 +604,7 @@
                     Access courses with up-to-date content reflecting the latest
                     trends and industry practices.
                   </p>
-                </div>
+                </div></div>
                 <div class="flex justify-end">
                   <div
                     class="bg-mainbgColor inline-block p-3 border rounded-md"
@@ -625,19 +629,23 @@
               <div
                 class="flex flex-col rounded-lg gap-5 md:gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
-                <div class="flex justify-end">
-                  <p class="text-5xl sm:text-6xl 3xl:text-8xl font-bold">05</p>
-                </div>
-                <div class="flex flex-col gap-2 xl:gap-5">
-                  <h3 class="text-lg sm:text-xl 3xl:text-4xl font-semibold">
-                    Practical Projects and Assignments
-                  </h3>
-                  <p
-                    class="text-lightCustomGrey text-sm md:text-base 3xl:text-xl"
-                  >
-                    Develop a portfolio showcasing your skills and abilities to
-                    potential employers.
-                  </p>
+                <div class="h-full flex flex-col gap-8">
+                  <div class="flex justify-end">
+                    <p class="text-5xl sm:text-6xl 3xl:text-8xl font-bold">
+                      05
+                    </p>
+                  </div>
+                  <div class="flex flex-col gap-2 xl:gap-5">
+                    <h3 class="text-lg sm:text-xl 3xl:text-4xl font-semibold">
+                      Practical Projects and Assignments
+                    </h3>
+                    <p
+                      class="text-lightCustomGrey text-sm md:text-base 3xl:text-xl"
+                    >
+                      Develop a portfolio showcasing your skills and abilities
+                      to potential employers.
+                    </p>
+                  </div>
                 </div>
                 <div class="flex justify-end">
                   <div
@@ -663,19 +671,23 @@
               <div
                 class="flex flex-col rounded-lg gap-5 md:gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
-                <div class="flex justify-end">
-                  <p class="text-5xl sm:text-6xl 3xl:text-8xl font-bold">06</p>
-                </div>
-                <div class="flex flex-col gap-2 xl:gap-5">
-                  <h3 class="text-lg sm:text-xl 3xl:text-4xl font-semibold">
-                    Interactive Learning Environment
-                  </h3>
-                  <p
-                    class="text-lightCustomGrey text-sm md:text-base 3xl:text-xl"
-                  >
-                    Collaborate with fellow learners, exchanging ideas and
-                    feedback to enhance your understanding.
-                  </p>
+                <div class="h-full flex flex-col gap-8">
+                  <div class="flex justify-end">
+                    <p class="text-5xl sm:text-6xl 3xl:text-8xl font-bold">
+                      06
+                    </p>
+                  </div>
+                  <div class="flex flex-col gap-2 xl:gap-5">
+                    <h3 class="text-lg sm:text-xl 3xl:text-4xl font-semibold">
+                      Interactive Learning Environment
+                    </h3>
+                    <p
+                      class="text-lightCustomGrey text-sm md:text-base 3xl:text-xl"
+                    >
+                      Collaborate with fellow learners, exchanging ideas and
+                      feedback to enhance your understanding.
+                    </p>
+                  </div>
                 </div>
                 <div class="flex justify-end">
                   <div
@@ -723,10 +735,10 @@
                 </button>
               </div>
             </div>
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-5 gap-y-8">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-5 gap-y-8 ">
               <!-- Card 1  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
+                class=" bg-white p-5 md:p-10 rounded-lg flex flex-col gap-10 justify-between hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -783,7 +795,7 @@
               </div>
               <!-- Card 2  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
+                class=" bg-white p-5 md:p-10 rounded-lg flex flex-col gap-10 justify-between hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -841,7 +853,7 @@
               <!-- Card 3  -->
 
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
+                class=" bg-white p-5 md:p-10 rounded-lg flex flex-col gap-10 justify-between hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -897,7 +909,7 @@
               </div>
               <!-- Card 4  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
+                class=" bg-white p-5 md:p-10 rounded-lg flex flex-col gap-10 justify-between hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -954,7 +966,7 @@
               </div>
               <!-- Card 5  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
+                class=" bg-white p-5 md:p-10 rounded-lg flex flex-col gap-10 justify-between hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -1011,7 +1023,7 @@
               </div>
               <!-- Card 6  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
+                class=" bg-white p-5 md:p-10 rounded-lg flex flex-col gap-10 justify-between hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
